test/test02.js
// var should = require("should")

// describe('test02', function () {

//   describe('error', function () {

//     it('compile error', function () {
//       error
//     })

//   })

//   describe('exception', function () {

//     it('throw exception', function () {
//       throw new Error('bad code')
//     })

//   })

// })